Adds Image procesing

--- a/bert_prediction.ipynb
+++ b/bert_prediction.ipynb
@@ -76,25 +76,98 @@
    "outputs": [],
    "source": [
     "from text_process import TextProcessor\n",
-    "# Make sure that you use the same max_length that you used when you trained the model\n",
-    "text_processor = TextProcessor(max_length=100)\n",
-    "\n",
+    "# Make sure that you use the same max_length that you used when you trained the model as seen in the snippet below\n",
+    "text_processor = TextProcessor(max_length=100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p align=center><img src=\"images/Example_1.png\"></p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initialize the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "with open('text_decoder.pkl', 'rb') as image_decoder:\n",
     "    image_decoder = pickle.load(image_decoder)\n",
     "\n",
-    "\n",
+    "# Use the decoder to translate the output of the model\n",
     "model = Classifier(ngpu=1, num_classes=13, decoder=image_decoder)\n",
     "model.load_state_dict(torch.load('model_bert.pt', map_location='cpu'))\n",
     "model.eval()\n",
     "model.to('cpu')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create an example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_example = 'I want to sell this chair because I need the money'\n",
+    "text_example = text_processor(text_example)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Predict the example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.predict_classes(text_example)"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.10.4 ('facebook')",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "6b567b586c7a2b230073a5bbe80c952350ec675626e8c300c6965d8b0efabd05"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
